# Mapboard-Platform

./: .editorconfig  .gitignore  .gitmodules  .mise.toml  Makefile  README.md  docker-compose.yaml  pyproject.toml  tsconfig.json
bonjour-service/: Dockerfile  bonjour-service.py  pyproject.toml
cli-app/: pyproject.toml
cli-app/mapboard/cli/: __init__.py  __main__.py  definitions.py
cross-sections/: Makefile  import-data
cross-sections/_old/: command.ts  package.json
cross-sections/_old/fixtures/: cross-section-units.sql
cross-sections/_old/sql/: 01-unit-outcrop.sql  03-update-mapping.sql
cross-sections/procedures/: 01-meta.sql  06-exaggeration.sql
cross-sections/tile-server/: tile-server
cross-sections/tile-server/sql/: tile-layer.sql
mapboard-cli/: README.md  pyproject.toml
mapboard-cli/core-fixtures/: 01-schema.sql  02-api.sql  03-roles.sql
mapboard-cli/mapboard/cli/: __init__.py  __main__.py  bonjour_service.py  branding.py  compose.py  config.py  control_command.py  core.py  database.py  definitions.py  fixtures.py  follow_logs.py  ingest.py  projects.py  settings.py  system.py  units.py  watch.py
mapboard-cli/mapboard/cli/criticalmaas/: __init__.py  update-topology.sql
mapboard-cli/mapboard/cli/fixtures/: mapboard-tables.sql  server
mapboard-cli/mapboard/cli/mobile-export/: __init__.py
mapboard-cli/mapboard/cli/mobile-export/fixtures/: create-tables.sql
mapboard-cli/mapboard/cli/mobile_export/: __init__.py  export-database
mapboard-cli/mapboard/cli/mobile_export/fixtures/: create-tables.sql  linework-type.sql  linework.sql  polygon-type.sql  polygon.sql
mapboard-cli/mapboard/cli/mobile_export/table_queries/: linework-type.sql  linework.sql  map-layer.sql  polygon-type.sql  polygon.sql
mapboard-ui/: .dockerignore  .gitignore  .yarnrc.yml  Dockerfile  README.md  global.d.ts  package.json  tsconfig.json  vite.config.ts
mapboard-ui-v1/: tsconfig.json
mapboard-ui-v1/layouts/: default.ts
mapboard-ui-v1/pages/: +Head.ts  +config.ts
mapboard-ui-v1/pages/docs/@openapi/: +data.client.ts
mapboard-ui-v1/pages/index/: main.module.css
mapboard-ui-v1/shared/components/: list.module.css
mapboard-ui/__archive/mapboard-web/: app.ts  index.ts
mapboard-ui/layouts/: LayoutDefault.tsx  default.ts  fullscreen.ts  layouts.module.css  layouts.module.sass  style.css
mapboard-ui/pages/: +Head.ts  +Head.tsx  +Layout.ts  +config.ts  +onBeforeRenderClient.ts
mapboard-ui/pages/docs/: +Page.mdx  +Page.ts
mapboard-ui/pages/docs/@openapi/: +Page.client.ts
mapboard-ui/pages/hmr-test/: +Page.ts  +Page.tsx
mapboard-ui/pages/index/: +Page.ts  +Page.tsx  +data.ts  main.module.css  main.module.sass
mapboard-ui/pages/project/@slug/: +Page.ts
mapboard-ui/pages/projects/@slug/: +Page.ts  +data.ts
mapboard-ui/pages/test/: +Page.client.ts
mapboard-ui/scripts/: generate-types.ts
mapboard-ui/server/: express-entry.ts  vike-handler.ts
mapboard-ui/server/styles/: index.ts  sprite-generator.ts  utils.ts
mapboard-ui/server/styles/_archive/: sprite-generator.ts
mapboard-ui/shared/: api-client.ts  maplibre-utils.ts  settings.ts
mapboard-ui/shared/client-components/: index.ts
mapboard-ui/shared/components/: index.ts  link.ts  list.module.css  list.module.sass  list.ts
mapboard-ui/shared/layouts/: default.ts  layouts.module.scss  style.css
mapboard-ui/shared/map-scale/: index.module.sass  index.ts
mapboard-ui/shared/maplibre/: tiled-map.ts  utils.ts
mapboard-ui/shared/types/: index.ts  project-api.ts
mapboard-ui/shared/utils/: api-client.ts  print-area.module.sass  print-area.ts  print-button.ts  routing.ts
mapboard-web/: .env.example  .gitignore  .yarnrc.yml  index.html  package.json  tsconfig.json  vite.config.js
mapboard-web/src/: app.ts  config.ts  index.ts  main.styl
mapboard-web/src/inspector/: index.ts
mapboard-web/src/map/: index.ts
mapboard-web/src/map/style/: index.ts
migrations/: add-composite-layers.sql  add-topological-key-to-tables.sql  clean-non-topological-lines.sql  drop-topology.sql  fill-linking-tables.sql  mapboard-api-functions.sql  merge-arbitrary-types.sql  move-to-new-schema-design-2.sql  move-to-new-schema.sql  prune-linking-tables.sql  recreate-indexes.sql  recreate-primary-keys.sql  topology-composite-layer.sql
py-modules/api/: README.md  pyproject.toml
py-modules/cli/: pyproject.toml
py-modules/cli/core-fixtures/: 01-schema.sql  01.1-functions.sql  02-api.sql  02.0-api.sql  02.1-api-transitional.sql  03-roles.sql
py-modules/cli/mapboard/cli/: __init__.py  backup_cluster.py  database.py  fixtures.py  ops.py  projects.py
py-modules/cli/mapboard/cli/criticalmaas/: constraints.sql  simplify-topology.sql
py-modules/cli/mapboard/cli/fixtures/: stations-layer.sql
py-modules/cli/mapboard/cli/mobile_export/: __init__.py
py-modules/cli/mapboard/cli/mobile_export/table_queries/: linework.sql  polygon.sql
py-modules/cli/mapboard/cli/ops/: __init__.py  composite_layers.py  create_display_layer.py  dangling_edges.py
py-modules/cli/mapboard/cli/procedures/: get-dangling-edges.sql  multipart-to-singlepart.sql  remove-edge-from-line.sql
py-modules/core/: README.md  pyproject.toml
py-modules/core/mapboard/core/: database.py  settings.py
py-modules/core/mapboard/core/task_runner/: __init__.py
py-modules/core/mapboard/core/workers/: __init__.py  topology.py
py-modules/cross-sections/: README.md  pyproject.toml
py-modules/cross-sections/mapboard/cross_sections/: __init__.py
py-modules/cross-sections/mapboard/cross_sections/fixtures/: 01-meta.sql  03-mapping.sql  04-piercing-points.sql  05-exaggeration.sql
py-modules/cross-sections/mapboard/cross_sections/procedures/: 02-functions.sql  05-piercing-points.sql  copy-info-to-mapboard-database.sql  update-topography.sql
py-modules/task-runner/: pyproject.toml
py-modules/tasks/: README.md  pyproject.toml
py-modules/tasks/mapboard/tasks/: core.py  tasks.py
scripts/: restore-database
system/: Caddyfile  docker-compose.yaml
task-runner/: pyproject.toml
task-runner/mapboard/task_runner/: __init__.py
(+101 files in other folders)
