[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "A command-line application to control the Mapboard system"
name = "mapboard.cli"
packages = [{include = "mapboard"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.3"
macrostrat-database = "^2.1.1"
macrostrat-utils = "^1.1.0"
python = "^3.10"
python-daemon = "^3.0.1"
python-dotenv = "^1.0.0"
rich = "^13.3.3"
typer = "^0.7.0"
zeroconf = "^0.56.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.0"

[tool.poetry.scripts]
mapboard = "mapboard.cli:cli"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
