[tool.poetry]
name = "mapboard.task-runner"
version = "1.0.0"
description = "Runner for Mapboard tasks"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "mapboard" }]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
